# agentx

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/chocolatey/: agentx.nuspec.template
.github/chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1.template  chocolateyuninstall.ps1
.github/homebrew/: agentx.rb.template
.github/workflows/: ci.yml  release.yml
crates/agent-identity/: Cargo.toml
crates/agent-identity/src/: lib.rs
crates/agentx-api/: Cargo.toml
crates/agentx-api/src/: api_bridge.rs  auth.rs  common.rs  error.rs  files.rs  lib.rs  provider.rs  rate_limits.rs  search.rs  telemetry.rs
crates/agentx-api/src/endpoint/: compact.rs  images.rs  memories.rs  models.rs  realtime_call.rs  responses.rs  responses_websocket.rs  search.rs  session.rs
crates/agentx-api/src/endpoint/realtime_websocket/: methods.rs  methods_common.rs  methods_v1.rs  methods_v2.rs  protocol.rs  protocol_common.rs  protocol_v1.rs  protocol_v2.rs
crates/agentx-api/src/requests/: headers.rs
crates/agentx-api/src/sse/: responses.rs
crates/agentx-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs  sse_end_to_end.rs
crates/agentx-client/: Cargo.toml
crates/agentx-client/src/: custom_ca.rs  request.rs
crates/app-server-protocol/: Cargo.toml
crates/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
crates/app-server-protocol/schema/json/v1/: InitializeResponse.json
crates/app-server-protocol/schema/json/v2/: ConfigReadResponse.json  ConfigWriteResponse.json
crates/app-server-protocol/schema/typescript/: InitializeResponse.ts
crates/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs
crates/app-server-protocol/src/protocol/: common.rs  common_tests.rs  event_mapping.rs  item_builders.rs  thread_history.rs  v1.rs
crates/app-server-protocol/src/protocol/v2/: account.rs  collaboration_mode.rs  command_exec.rs  config.rs  fs.rs  hook.rs  item.rs  mcp.rs  model.rs  permissions.rs  plugin.rs  process.rs  realtime.rs  review.rs  shared.rs  tests.rs  thread.rs  thread_data.rs  turn.rs  windows_sandbox.rs
crates/app-server-transport/: Cargo.toml
crates/app-server-transport/src/: lib.rs  outgoing_message.rs  stubs.rs
crates/app-server-transport/src/transport/: auth.rs  mod.rs  stdio.rs  unix_socket.rs  unix_socket_tests.rs
crates/app-server-transport/src/transport/remote_control/: auth.rs  client_tracker.rs  clients.rs  desired_state.rs  enroll.rs  mod.rs  protocol.rs  segment.rs  segment_tests.rs  tests.rs  websocket.rs
crates/arg0/: Cargo.toml
crates/arg0/src/: lib.rs  stubs.rs
crates/async-utils/: Cargo.toml
crates/bwrap/: Cargo.toml  build.rs  config.h
crates/cli/: Cargo.toml
crates/cli/src/: exec_server_telemetry.rs  lib.rs  login.rs  main.rs
crates/codex-client/: Cargo.toml
crates/exec-server/: Cargo.toml  README.md
crates/exec-server/src/: client.rs  client_recovery.rs  client_transport.rs  connection.rs  environment.rs  environment_provider.rs  environment_registry.rs  environment_toml.rs  file_read.rs  fs_helper.rs  fs_sandbox.rs  lib.rs  local_file_system.rs  local_file_system_path_uri_tests.rs  local_process.rs  process_sandbox.rs  process_sandbox_tests.rs  protocol.rs  remote.rs  remote_file_stream.rs  remote_file_system.rs  remote_file_system_path_uri_tests.rs  rpc.rs  runtime_paths.rs  sandboxed_file_system.rs  sandboxed_file_system_path_uri_tests.rs
crates/exec-server/src/client/: reqwest_http_client.rs
crates/exec-server/src/server/: file_system_handler.rs  handler.rs  process_handler.rs  processor.rs  session_registry.rs  transport_tests.rs
crates/exec-server/src/server/handler/: tests.rs
crates/exec-server/testing/: windows_exec_server.rs  wine_exec_server.rs  wine_remote_test_runner.rs
crates/exec-server/tests/: http_client.rs
crates/file-system/: Cargo.toml
crates/file-system/src/: lib.rs
crates/login/: Cargo.toml
crates/login/src/: auth_env_telemetry.rs  device_code_auth.rs  lib.rs  outbound_proxy.rs  server.rs  stubs.rs  token_data.rs  token_data_tests.rs
crates/login/src/assets/: success.html  success_legacy.html
crates/login/src/auth/: agent_identity.rs  auth_tests.rs  default_client.rs  default_client_tests.rs  error.rs  external_bearer.rs  manager.rs  mod.rs  personal_access_token.rs  revoke.rs  storage.rs  storage_tests.rs
crates/login/tests/suite/: auth_refresh.rs  logout.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: approvals.rs  config_types.rs  error.rs  items.rs  models.rs  network_policy.rs  permissions.rs  protocol.rs  request_permissions.rs  shell_environment.rs
crates/sandboxing/: Cargo.toml
crates/sandboxing/src/: bwrap.rs  denial.rs  landlock.rs  lib.rs  manager.rs  manager_tests.rs  network_proxy.rs  policy_transforms.rs  policy_transforms_tests.rs  seatbelt.rs  seatbelt_tests.rs  windows.rs
crates/shell-command/: Cargo.toml
crates/shell-command/src/: parse_command.rs  powershell.rs
scripts/: .codex-refs-allowed  install.sh  verify-no-codex-refs.sh
utils/absolute-path/: Cargo.toml
utils/absolute-path/src/: lib.rs
utils/path-uri/: Cargo.toml
utils/path-uri/src/: api_path_string.rs  api_path_string_tests.rs  lib.rs  tests.rs
utils/pty/: Cargo.toml
utils/rustls-provider/: Cargo.toml
utils/rustls-provider/tests/: preinstalled.rs  provider.rs
