[package]
name = "codex-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_arg0"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-exec-server = { workspace = true }
codex-sandboxing = { workspace = true }
codex-utils-absolute-path = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
