[package]
name = "agentx-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agentx_arg0"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
agentx-exec-server = { workspace = true }
agentx-sandboxing = { workspace = true }
agentx-utils-absolute-path = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
