[package]
name = "agentx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "codex"
path = "src/main.rs"

[lib]
name = "agentx_cli"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
agentx-agent-identity = { workspace = true }
agentx-api = { workspace = true }
agentx-app-server-protocol = { workspace = true }
agentx-arg0 = { workspace = true }
agentx-exec-server = { workspace = true }
agentx-login = { workspace = true }
agentx-protocol = { workspace = true }
agentx-sandboxing = { workspace = true }
agentx-utils-absolute-path = { workspace = true }
crossterm = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
os_info = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
sys-locale = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true }
wiremock = { workspace = true }
