[package]
name = "agentx-file-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
agentx-protocol = { workspace = true }
agentx-utils-absolute-path = { workspace = true }
agentx-utils-path-uri = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lib]
test = false
doctest = false
