[package]
name = "agentx-sandboxing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agentx_sandboxing"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
agentx-protocol = { workspace = true }
agentx-utils-absolute-path = { workspace = true }
agentx-utils-path-uri = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
regex-lite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
